[package]
name = "acorn_prng"
version = "3.0.1"
edition = "2021"
license = "ISC"
description = "A no_std, 0 dependency, pseudo-random number generator based on the ACORN algorithm."
categories = ["algorithms", "no-std::no-alloc"]
keywords = ["prng", "random", "generator", "seed"]
readme = "README.md"
exclude = ["target", "Cargo.lock"]
documentation = "https://docs.rs/acorn_prng"
repository = "https://github.com/auronandace/acorn_prng/"
homepage = "https://github.com/auronandace/acorn_prng/"

[lib]
name = "acorn_prng"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
